@@ -19,8 +19,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Optional;
-
 @Service
 @RequiredArgsConstructor
 @Slf4j
@@ -49,29 +47,18 @@ public class AdminService {
     }
 
     // 회원 정보 수정
+    @Transactional
     public void updateMemberInfo(Long memberId, AdminUpdateMemberRequest request){
         log.info("회원 정보 수정 요청 - memberId: {}", memberId);
 
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new ServiceException(ResultCode.MEMBER_NOT_FOUND.code(), "해당 회원이 존재하지 않습니다."));
 
-        // 1. 이름 변경
-        if (request.name() != null && !request.name().isBlank()) {
-            member.updateName(request.name());
+        // 프로필 이미지 변경
+        if (request.getProfileUrl() != null) {
+            String profileUrl = request.getProfileUrl().trim().isEmpty() ? null : request.getProfileUrl();
+            member.updateProfileUrl(profileUrl);
         }
-
-        // 2. 상태 변경
-        if (request.status() != null) {
-            member.changeStatus(request.status());
-        }
-
-        // 3. 프로필 이미지 변경
-        // 빈 문자열이거나 공백만 있는 경우 null로 설정
-        String profileUrl = Optional.ofNullable(request.profileUrl())
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .orElse(null);
-        member.updateProfileUrl(profileUrl);
 
         memberRepository.save(member);
     }
@@ -92,7 +79,7 @@ public class AdminService {
         return AdminPatentResponse.fromEntity(post);
     }
 
-    // 특허 정보 수정
+    // 특허 정보 수정 (DTO 유효성 검사로 간소화)
     @Transactional
     public void updatePatentInfo(Long patentId, AdminUpdatePatentRequest request) {
         log.info("특허 정보 수정 요청 - patentId: {}", patentId);
@@ -100,17 +87,12 @@ public class AdminService {
         Post post = postRepository.findById(patentId)
                 .orElseThrow(() -> new ServiceException(ResultCode.POST_NOT_FOUND.code(), "해당 특허가 존재하지 않습니다."));
 
-        // Post.Category enum으로 변환
-        Post.Category category = Post.Category.from(request.category())
-                .orElseThrow(() -> new ServiceException(ResultCode.BAD_REQUEST.code(), "유효하지 않은 카테고리입니다."));
+        // DTO에서 이미 enum 타입으로 받았으므로 직접 사용
+        Post.Category category = request.getCategory();
+        Post.Status status = request.getStatus();
 
-        // Post.Status enum으로 변환
-        Post.Status status = Post.Status.valueOf(request.status());
-
-        // 기존 updatePost 메서드 사용
-        post.updatePost(request.title(), request.description(), category, request.price());
-        
-        // 상태 업데이트
+        // 엔티티 업데이트
+        post.updatePost(request.getTitle(), request.getDescription(), category, request.getPrice());
         post.updateStatus(status);
 
         postRepository.save(post);
